# test_DataFort

./: .env.template  Dockerfile.pd  Dockerfile.test  README.md  cities.py  collector.py  config.ini  docker-compose.yml  pyproject.toml  requirements.txt
collector/: cities.py  collector.py  collector_dc.py  config.ini  config.ini.template  create_db_if_not_exists.py  pyproject.toml
collector/db/: core.py
collector/utils/: config.py  inspect.py
conf/: redis.conf
db/: core.py
utils/: config.py  redis.py
